# omni-channel

./: .dockerignore  .gitignore  API.md  Dockerfile  docker-compose.yml  package.json  pyproject.toml  test_patch.py
app/: agent_factory.py  agents.py  config.py  llm_proxy.py  main.py  patch_pydantic.py
app/resources/: agents.yaml  litellm_config.yaml
conductor/: high-speed-startup-plan.md  product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/core_workflow_manager_20260311/: index.md  metadata.json
conductor/archive/docker_ollama_20260311/: index.md  spec.md
conductor/archive/frontend_react19_20260311/: index.md  spec.md
conductor/tracks/core_workflow_manager_20260311/: plan.md  spec.md
conductor/tracks/docker_ollama_20260311/: metadata.json  plan.md
conductor/tracks/frontend_react19_20260311/: metadata.json  plan.md
frontend/: README.md  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/coverage/: Dashboard.tsx.html  clover.xml  coverage-final.json  index.html
frontend/coverage/src/: App.css.html  App.tsx.html  index.html
frontend/src/: App.css  App.test.tsx  App.tsx  index.css
frontend/src/components/: Dashboard.test.tsx  Dashboard.tsx  Layout.test.tsx  Layout.tsx
scripts/: entrypoint.sh  pull_models.sh  start-dev.sh
tests/: test_agents.py  test_config.py  test_docker_compose.py  test_e2e_workflow.py  test_frontend_setup.py  test_llm_proxy.py  test_llm_proxy_fallback.py  test_main.py  test_pull_models.py  test_readiness.py  test_routing_state.py  test_scaffold.py
(+35 files in other folders)
